# python-package-template

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs-and-format.yml  docs_and_format.yml  publish.yml  tests.yml
conda-recipe/: meta.yaml
docs/: index.html
