[tool.poetry]
name = "<<PACKAGE_NAME>>"
version = "0.1.0"
description = "<<PACKAGE_DESCRIPTION>>"
authors = ["<<YOUR_NAME>> <<<YOUR_EMAIL>>>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/<<GITHUB_USERNAME>>/python-<<PACKAGE_NAME>>"
documentation = "https://<<GITHUB_USERNAME>>.github.io/python-<<PACKAGE_NAME>>/<<PACKAGE_NAME>>"
keywords = []

[tool.poetry.dependencies]
python = "^<<MIN_PYTHON_VERSION>>"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pdoc3 = "*"
toml = "*"
types-toml = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [".venv", "venv"]
