[tool.poetry]
name = "<<PACKAGE>>"
# Version is overwritten at build time by CI based on git tag
version = "0"
description = "<<PACKAGE_DESCRIPTION>>"
authors = ["<<YOUR_NAME>> <<<YOUR_EMAIL>>>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/<<GITHUB_USERNAME>>/python-<<PACKAGE>>"
documentation = "https://<<GITHUB_USERNAME>>.github.io/python-<<PACKAGE>>/<<PACKAGE>>"
keywords = []

[tool.poetry.dependencies]
python = ">=<<MIN_PYTHON_VERSION>>"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
pdoc3 = "*"
toml = "*"
types-toml = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [".venv", "venv"]
