[project]
name = "<<PACKAGE>>"
# Version is overwritten at build time by CI based on git tag
version = "0+dev"
description = "<<PACKAGE_DESCRIPTION>>"
authors = [{ name = "<<YOUR_NAME>>", email = "<<YOUR_EMAIL>>" }]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=<<MIN_PYTHON_VERSION>>"
keywords = []

[project.urls]
repository = "https://github.com/<<GITHUB_USERNAME>>/python-<<PACKAGE>>"
documentation = "https://<<GITHUB_USERNAME>>.github.io/python-<<PACKAGE>>/<<PACKAGE>>"

[dependency-groups]
dev = ["black", "pytest", "pdoc3", "mypy"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = [".venv", "venv"]
